--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                             </div>
 
                             <div class="col-md-3 col-sm-6">
-                                <!--<a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.6s">
+                                <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.6s">
                                     <span class="rotate-box-icon"><i class="fa fa-clock-o"></i></span>
                                     <div class="rotate-box-info">
-                                        <h4>Since When?</h4>
-                                        <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
+                                        <h4>Compromisso</h4>
+                                        <p>Temos o compromisso de entregar serviços de qualidade, colaborando com nossos clientes para que possamos crescer juntos.</p>
                                     </div>
-                                </a>-->
+                                </a>
                             </div>
 
                         </div> <!-- /.row -->
