--- a/index.html
+++ b/index.html
@@ -484,26 +484,11 @@
                     <div class="row">
                         <div class="team-items">
                             <div class="col-md-2">
-                                <div class="team-container wow bounceIn" data-wow-delay="0.2s">
-                                    <div class="team-item">
-                                        <div class="team-triangle">
-                                            <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
-                                                <div class="team-hover text-center">
-                                                    <i class="fa fa-male"></i>
-                                                    <p>Kaio Anselmo</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-2">
                                 <div class="team-container wow bounceIn" data-wow-delay="0.3s">
                                     <div class="team-item">
                                         <div class="team-triangle">
                                             <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
+                                                <img src="img/team/bit.jpeg" alt="title"/>
                                                 <div class="team-hover text-center">
                                                     <i class="fa fa-male"></i>
                                                     <p>Gabriel Bittencourt</p>
@@ -514,45 +499,14 @@
                                 </div>
                             </div>
                             <div class="col-md-2">
-                                <div class="team-container wow bounceIn" data-wow-delay="0.4s">
-                                    <div class="team-item">
-                                        <div class="team-triangle">
-                                            <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
-                                                <div class="team-hover text-center">
-                                                    <i class="fa fa-male"></i>
-                                                    <p>Jonas Negri</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-2">
                                 <div class="team-container wow bounceIn" data-wow-delay="0.5s">
                                     <div class="team-item">
                                         <div class="team-triangle">
                                             <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
+                                                <img src="img/team/bia.jpeg" alt="title"/>
                                                 <div class="team-hover text-center">
                                                     <i class="fa fa-female"></i>
                                                     <p>Beatriz Santos</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-2">
-                                <div class="team-container wow bounceIn" data-wow-delay="0.6s">
-                                    <div class="team-item">
-                                        <div class="team-triangle">
-                                            <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
-                                                <div class="team-hover text-center">
-                                                    <i class="fa fa-male"></i>
-                                                    <p>Luan Lorenzo</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -564,10 +518,10 @@
                                     <div class="team-item">
                                         <div class="team-triangle">
                                             <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
+                                                <img src="img/team/padilha.jpeg" alt="title"/>
                                                 <div class="team-hover text-center">
                                                     <i class="fa fa-male"></i>
-                                                    <p>Matheus Francisco</p>
+                                                    <p>Matheus Padilha</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -579,10 +533,26 @@
                                     <div class="team-item">
                                         <div class="team-triangle">
                                             <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
+                                                <img src="img/team/patrick.jpeg" alt="title"/>
                                                 <div class="team-hover text-center">
                                                     <i class="fa fa-male"></i>
-                                                    <p>Gabriel Domene</p>
+                                                    <p>Patrick Kochan</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                             <div class="col-md-2">
+                                <div class="team-container wow bounceIn" data-wow-delay="0.8s">
+                                    <div class="team-item">
+                                        <div class="team-triangle">
+                                            <div class="content">
+                                                <img src="img/team/ramon.jpeg" alt="title"/>
+                                                <div class="team-hover text-center">
+                                                    <i class="fa fa-male"></i>
+                                                    <p>Ramon Tramontin</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -594,7 +564,7 @@
                                     <div class="team-item">
                                         <div class="team-triangle">
                                             <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
+                                                <img src="img/team/vitao.jpeg" alt="title"/>
                                                 <div class="team-hover text-center">
                                                     <i class="fa fa-male"></i>
                                                     <p>Vitor Camargo</p>
@@ -609,55 +579,10 @@
                                     <div class="team-item">
                                         <div class="team-triangle">
                                             <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
-                                                <div class="team-hover text-center">
-                                                    <i class="fa fa-male"></i>
-                                                    <p>Alan Kunz</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                             <div class="col-md-2">
-                                <div class="team-container wow bounceIn" data-wow-delay="0.8s">
-                                    <div class="team-item">
-                                        <div class="team-triangle">
-                                            <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
-                                                <div class="team-hover text-center">
-                                                    <i class="fa fa-male"></i>
-                                                    <p>Thiago Dal Pont</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                             <div class="col-md-2">
-                                <div class="team-container wow bounceIn" data-wow-delay="0.8s">
-                                    <div class="team-item">
-                                        <div class="team-triangle">
-                                            <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
+                                                <img src="img/team/manao.jpeg" alt="title"/>
                                                 <div class="team-hover text-center">
                                                     <i class="fa fa-male"></i>
                                                     <p>Luan Rodrigues</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                             <div class="col-md-2">
-                                <div class="team-container wow bounceIn" data-wow-delay="0.8s">
-                                    <div class="team-item">
-                                        <div class="team-triangle">
-                                            <div class="content">
-                                                <img src="img/team/7.jpg" alt="title"/>
-                                                <div class="team-hover text-center">
-                                                    <i class="fa fa-male"></i>
-                                                    <p>Luiz Guilherme</p>
                                                 </div>
                                             </div>
                                         </div>
