Update index arrumando link do site Enejr

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                                                     <div class="portfolio_single_content">
                                                         <img src="img/portfolio/site-enejr.PNG" alt="title"/>
                                                         <div>
-                                                            <a href="http://www.denariuscontabil.com.br/">Site ENEjr</a>
+                                                            <a href="http://www.enejr.com.br/">Site ENEjr</a>
                                                             <span>Edição do site da ENEjr</span>
                                                         </div>
                                                     </div>
